--- a/hm.html
+++ b/hm.html
@@ -27,7 +27,7 @@
     </div>
     <div class="cards">
         <div class="card">
-          <center><a href="//neondb_owner:aT3oEVBJC9lP@ep-dry-voice-a1ibgakb.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"  target="_main" ><img src="monitoringg.webp" class="card-img-top"></a>  
+          <center><a href="http://192.168.74.144/"  target="_main" ><img src="monitoringg.webp" class="card-img-top"></a>  
             <div class="card-body">
               <h2 class="card-title"><center>Monitoring</center></h2>
               <p>
