--- a/about.html
+++ b/about.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Electronics Enthusiasts</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>About Us</h1>
-            <p>Meet our core team</p>
+            <h1>ABOUT US</h1>
+            <h2>MEET OUT CORE TEAM</h2>
         </header>
         
         <section class="team">
             <h2>Our Team</h2>
             <div class="team-member">
-                <img src="member1.webp" alt="Member 1">
+                <a href="https://in.linkedin.com/in/tawfique-ur-rahaman" target="_main"><img src="member1.webp" alt="Member 1"></a>
                 <h3>TAWFIQUE UR RAHAMAN</h3>
                 <p>USN: 1MV22EC117</p>
             </div>
@@ -42,7 +42,8 @@
             <div class="guide-member">
                 <a href="https://www.sirmvit.edu/dr-s-pradeep-narayanan/" target="_main"><img src="guide.webp" alt="Project Guide"></a>
                 <h3>DR. S PRADEEP NARAYANAN</h3>
-                <p> Assistant Professor, ECE</p>
+                <p> Assistant Professor, Department Of Electronics & Communication Engineering</p>
+                <h5></h5>
             </div>
         </section>
     </div>
