rearrange files and made lil change in UI

--- a/hm.html
+++ b/hm.html
@@ -25,7 +25,7 @@
               &nbsp&nbsp
             </P>
             <a href="logout.html">
-              <img src="LOGBOT.webp" height="40px"  alt="...">
+              <button>LOG OUT</button>
             </a>
             
         </nav>
@@ -34,7 +34,7 @@
         <div class="card">
           <center>
             <a href="http://192.168.74.144/"  target="_main" >
-              <img src="monitoringg.webp" class="card-img-top">
+              <img src="images/monitoringg.webp" class="card-img-top">
             </a>  
             <div class="card-body">
               <a href="http://192.168.74.144/"  target="_main" style="text-decoration: none;color: white;" >
@@ -52,7 +52,7 @@
         
         <div class="card">
           <center><a href="https://www.ijraset.com/research-paper/iot-based-waste-management-system" target="_main">
-                    <img src="knowmore.webp" alt="..." class="card-img-top">
+                    <img src="images/knowmore.webp" alt="..." class="card-img-top">
                   </a>
           </center>
             <div class="card-body">
@@ -69,7 +69,7 @@
         <div class="card">
           <center>
             <a href="about.html" target="_main">
-              <img src="aboutus.webp" alt="About Us Image" class="card-img-top">
+              <img src="images/aboutus.webp" alt="About Us Image" class="card-img-top">
             </a>
           </center>
           <div class="card-body">
