--- a/about.html
+++ b/about.html
@@ -16,22 +16,22 @@
         <section class="team">
             <h2>Our Team</h2>
             <div class="team-member">
-                <a href="https://in.linkedin.com/in/tawfique-ur-rahaman" target="_main"><img src="member1.webp" alt="Member 1"></a>
+                <a href="https://in.linkedin.com/in/tawfique-ur-rahaman" target="_main"><img src="images/member1.webp" alt="Member 1"></a>
                 <h3>TAWFIQUE UR RAHAMAN</h3>
                 <p>USN: 1MV22EC117</p>
             </div>
             <div class="team-member">
-                <img src="member2.webp" alt="Member 2">
+                <img src="images/member2.webp" alt="Member 2">
                 <h3>P SHIVA</h3>
                 <p>USN: 1MV22EC084</p>
             </div>
             <div class="team-member">
-                <img src="member3.webp" alt="Member 3">
+                <img src="images/member3.webp" alt="Member 3">
                 <h3>RAHUL</h3>
                 <p>USN: 1MV22EC088</p>
             </div>
             <div class="team-member">
-                <img src="member4.webp" alt="Member 4">
+                <img src="images/member4.webp" alt="Member 4">
                 <h3>KISHOR</h3>
                 <p>USN: 1MV22EC067</p>
             </div>
@@ -40,7 +40,7 @@
         <section class="project-guide">
             <h2>Project Guide</h2>
             <div class="guide-member">
-                <a href="https://www.sirmvit.edu/dr-s-pradeep-narayanan/" target="_main"><img src="guide.webp" alt="Project Guide"></a>
+                <a href="https://www.sirmvit.edu/dr-s-pradeep-narayanan/" target="_main"><img src="images/guide.webp" alt="Project Guide"></a>
                 <h3>DR. S PRADEEP NARAYANAN</h3>
                 <p> Assistant Professor, Department Of Electronics & Communication Engineering</p>
                 <h5></h5>
